--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "javascript",
   "version": "1.0.0",
-
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -16,12 +15,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
-
-  "browserslist":[
+  "browserslist": [
     "last 2 versions"
-
   ]
-  
 }
